--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/app-header/app-header.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/app-header/app-header.html
@@ -2,11 +2,11 @@
   <div class="ep-app-header__left">
     <button
       *ngIf="showBackButton"
-      class="ep-app-header__back-btn"
+      mat-icon-button
       (click)="onBackClick()"
       aria-label="Go back"
     >
-      <span class="material-icons">arrow_back</span>
+      <mat-icon>arrow_back</mat-icon>
     </button>
     <h1 class="ep-app-header__title">{{ title }}</h1>
   </div>
