--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/badge/badge.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/badge/badge.html
@@ -1,3 +1,5 @@
-<span [class]="badgeClasses">
-  <ng-content></ng-content>
-</span>
+<mat-chip-set>
+  <mat-chip [class]="badgeClasses" [disabled]="false" [highlighted]="variant === 'primary'">
+    <ng-content></ng-content>
+  </mat-chip>
+</mat-chip-set>
