--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/card/card.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/card/card.html
@@ -1,3 +1,5 @@
-<div [class]="cardClasses">
-  <ng-content></ng-content>
-</div>
+<mat-card [appearance]="matAppearance" [class]="cardClasses">
+  <mat-card-content>
+    <ng-content></ng-content>
+  </mat-card-content>
+</mat-card>
