--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/breadcrumb/breadcrumb.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/breadcrumb/breadcrumb.html
@@ -7,6 +7,7 @@
     >
       <button
         *ngIf="!isLast(i)"
+        mat-button
         class="ep-breadcrumb__link"
         (click)="onItemClick(item, i)"
       >
@@ -15,9 +16,7 @@
       <span *ngIf="isLast(i)" class="ep-breadcrumb__current">
         {{ item.label }}
       </span>
-      <span *ngIf="!isLast(i)" class="ep-breadcrumb__separator">
-        <span class="material-icons">chevron_right</span>
-      </span>
+      <mat-icon *ngIf="!isLast(i)" class="ep-breadcrumb__separator">chevron_right</mat-icon>
     </li>
   </ol>
 </nav>
