--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/dialog/dialog.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/dialog/dialog.html
@@ -2,8 +2,8 @@
   <div [class]="dialogClasses" role="dialog" aria-modal="true" [attr.aria-labelledby]="title ? 'dialog-title' : null">
     <div class="ep-dialog__header">
       <h2 class="ep-dialog__title" id="dialog-title">{{ title }}</h2>
-      <button class="ep-dialog__close" (click)="onClose()" aria-label="Close dialog">
-        <span class="material-icons">close</span>
+      <button mat-icon-button (click)="onClose()" aria-label="Close dialog">
+        <mat-icon>close</mat-icon>
       </button>
     </div>
     <div class="ep-dialog__content">
