--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/empty-state/empty-state.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/empty-state/empty-state.html
@@ -1,6 +1,6 @@
 <div class="ep-empty-state">
   <div class="ep-empty-state__icon">
-    <span class="material-icons">{{ icon }}</span>
+    <mat-icon>{{ icon }}</mat-icon>
   </div>
   <h3 class="ep-empty-state__title">{{ title }}</h3>
   <p class="ep-empty-state__description">{{ description }}</p>
