--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/help-text/help-text.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/components/help-text/help-text.html
@@ -1,5 +1,5 @@
 <div [class]="helpTextClasses">
-  <span class="ep-help-text__icon material-icons">{{ defaultIcon }}</span>
+  <mat-icon class="ep-help-text__icon">{{ defaultIcon }}</mat-icon>
   <div class="ep-help-text__content">
     <h4 *ngIf="title" class="ep-help-text__title">{{ title }}</h4>
     <div class="ep-help-text__body">
