--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering/src/app/pages/home/home.scss
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering/src/app/pages/home/home.scss
@@ -42,6 +42,14 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 16px;
+
+  ep-card {
+    height: 100%;
+
+    ::ng-deep .mat-mdc-card {
+      height: 100%;
+    }
+  }
 }
 
 .home__card {
