--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering/src/app/pages/request-edit/request-edit.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering/src/app/pages/request-edit/request-edit.html
@@ -1,11 +1,3 @@
-<ep-app-header [title]="request?.name || 'Edit Request'">
-  <div header-actions>
-    <ep-button variant="icon" title="Help">
-      <span class="material-icons">help_outline</span>
-    </ep-button>
-  </div>
-</ep-app-header>
-
 <main class="request-edit">
   @if (loading) {
     <div class="request-edit__loading">Loading...</div>
@@ -50,9 +42,9 @@
           placeholder="/output/path"
           [(ngModel)]="outputDirectory"
         />
-        <ep-button variant="secondary" (click)="onBrowseDirectory()">
-          <span class="material-icons">folder_open</span>
-        </ep-button>
+        <button mat-stroked-button (click)="onBrowseDirectory()">
+          <mat-icon>folder_open</mat-icon>
+        </button>
       </div>
       <p class="request-edit__help-text">Directory where the solution will be generated</p>
     </div>
@@ -100,12 +92,12 @@
               </div>
             </div>
             <div class="request-edit__repo-actions">
-              <ep-button variant="icon" (click)="onEditRepository(repo)" title="Edit">
-                <span class="material-icons">edit</span>
-              </ep-button>
-              <ep-button variant="icon" (click)="onDeleteRepository(repo)" title="Delete">
-                <span class="material-icons">delete</span>
-              </ep-button>
+              <button mat-icon-button (click)="onEditRepository(repo)" title="Edit">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button (click)="onDeleteRepository(repo)" title="Delete">
+                <mat-icon>delete</mat-icon>
+              </button>
             </div>
           </div>
         }
@@ -119,11 +111,11 @@
   </ep-card>
 
     <div class="request-edit__actions">
-      <ep-button variant="secondary" (click)="onCancel()">Cancel</ep-button>
-      <ep-button variant="primary" (click)="onSave()">
-        <span class="material-icons">save</span>
+      <button mat-stroked-button (click)="onCancel()">Cancel</button>
+      <button mat-flat-button color="primary" (click)="onSave()">
+        <mat-icon>save</mat-icon>
         Save Changes
-      </ep-button>
+      </button>
     </div>
   }
 </main>
