--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering/src/app/pages/request-execute/request-execute.html
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering/src/app/pages/request-execute/request-execute.html
@@ -1,14 +1,3 @@
-<ep-app-header [title]="request?.name || 'Execute Request'">
-  <div header-actions>
-    @if (!executing && executionResult?.status === 'success') {
-      <ep-button variant="primary" size="small" (click)="onViewOutput()">
-        <span class="material-icons">visibility</span>
-        View Output
-      </ep-button>
-    }
-  </div>
-</ep-app-header>
-
 <main class="request-execute">
   @if (!request) {
     <div class="request-execute__loading">Loading...</div>
@@ -125,17 +114,17 @@
 
     <div class="request-execute__actions">
       @if (!executing) {
-        <ep-button variant="secondary" (click)="onBackToRequest()">
+        <button mat-stroked-button (click)="onBackToRequest()">
           Back to Request
-        </ep-button>
-        <ep-button variant="secondary" (click)="onBackToList()">
+        </button>
+        <button mat-stroked-button (click)="onBackToList()">
           Back to List
-        </ep-button>
+        </button>
         @if (executionResult?.status === 'success') {
-          <ep-button variant="primary" (click)="onViewOutput()">
-            <span class="material-icons">visibility</span>
+          <button mat-flat-button color="primary" (click)="onViewOutput()">
+            <mat-icon>visibility</mat-icon>
             View Output
-          </ep-button>
+          </button>
         }
       }
     </div>
