--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/search-box/search-box.scss
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering-components/src/lib/search-box/search-box.scss
@@ -12,6 +12,9 @@
     transform: translateY(-50%);
     color: var(--ee-on-surface-disabled);
     font-size: 20px;
+    width: 20px;
+    height: 20px;
+    line-height: 1;
     pointer-events: none;
   }
 
