--- a/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering/src/styles.scss
+++ b/src/Endpoint.Engineering.Workspace/projects/endpoint-engineering/src/styles.scss
@@ -1,3 +1,7 @@
+@use '@angular/material' as mat;
+
+@include mat.core();
+
 /* Global Styles */
 :root {
   --mat-primary: #9fa8da;
@@ -29,7 +33,7 @@ html, body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
   background: var(--mat-background);
   color: var(--mat-on-surface);
   margin: 0;
